	Fixed bug where IE would crash if when backspace where used on some specific contents.
	Fixed bug where pasting of plain text in WebKit would result in merging of text lines.
	Fixed bug where it wasn't possible to delete images or tables using backspace on IE9.
	Fixed bug where urls in styles would generate a JS error due to incorrect scope.
Version 3.4b1 (2010-12-20)
	Added new serialization engine that increases performance and enforces valid output according to the specified schema settings.
	Added new HTML parser logic used by the serialization engine and can handle malformed html contents.
	Added new valid_children config option, enables more fine grain control of elements can be inside other elements.
	Added new entities encoding logic boost performance and will only encode entities based on context i.e. attributes/text nodes.
	Added new protect setting that enables users to protect template items from being removed by the serializer logic.
	Added new {$caret} marker for the mceInsertContent command. Makes it possible to move the caret to a specific position when inserting contents.
	Added new validation of anchor names. Only valid W3C names will be accepted.
	Replaced the internal _mce_ prefixed attributes to the more standard HTML5 data-mce- prefix. This will also resolve future browser santiaztion issues.
	Fixed bug where the paste plugin wouldn't convert Word lists with more than 9 items to real ol lists. Patch contributed by Mike (yogaboy).
	Fixed bug where clicking on a format title would produce errors if the current selection didn't have any formats.
	Fixed bug where paste of simple texts wouldn't work correctly in Gecko using the paste plugin since it keeps block formatting.
	Fixed bug where confirm dialogs didn't display correctly due to resent IE9 fixes.
	Fixed bug where spaces in URLs wouldn't be properly encoded to %20 if the user entered them in the link dialogs. Patch contributed by Ephox.