@@ -490,6 +490,12 @@
 				]);
 			}
 
+			process([
+				// Copy paste from Java like Open Office will produce this junk on FF
+				[/Version:[\d.]+\nStartHTML:\d+\nEndHTML:\d+\nStartFragment:\d+\nEndFragment:\d+/gi, ''],
+				[/<\/h[1-6][^>]*>/gi, "</strong></p>"]
+			]);
+
 			// Class attribute options are: leave all as-is ("none"), remove all ("all"), or remove only those starting with mso ("mso").
 			// Note:-  paste_strip_class_attributes: "none", verify_css_classes: true is also a good variation.
 			stripClass = getParam(ed, "paste_strip_class_attributes");
